--- a/src/main/resources/templates/bet/edit.html
+++ b/src/main/resources/templates/bet/edit.html
@@ -88,13 +88,17 @@
 							</div>
 						</div>
 						<div class="row">
-							<button type="submit" class="btn btn-primary" th:text="#{button.save}"></button>
-							<a href="#" th:href="@{${betCommand.getBackUrl()}}" class="btn btn-default" role="button" th:text="#{button.cancel}"></a>
-							<button type="button" class="btn btn-info" onclick="runRandomDice()"><i class="fas fa-dice" aria-hidden="true"></i></button>
+							<div class="col-xs-12">
+								<button type="submit" class="btn btn-primary" th:text="#{button.save}"></button>
+								<button type="button" class="btn btn-info" onclick="runRandomDice()"><i class="fas fa-dice" aria-hidden="true"></i></button>
+								<a href="#" th:href="@{${betCommand.getBackUrl()}}" class="btn btn-default" role="button" th:text="#{button.cancel}"></a>
+							</div>
 						</div>
 						<div class="row">
-							<i class="fas fa-calendar-check" aria-hidden="true"></i>
-							<a href="#" th:href="@{'/ics/' + ${betCommand.matchId}}" th:text="#{calendar.ics.download.text}"></a>
+							<div class="col-xs-12">
+								<i class="fas fa-calendar-check" aria-hidden="true"></i>
+								<a href="#" th:href="@{'/ics/' + ${betCommand.matchId}}" th:text="#{calendar.ics.download.text}"></a>
+							</div>
 						</div>
 					</div>
 				</div>
