--- a/src/main/resources/templates/matches/matchresult.html
+++ b/src/main/resources/templates/matches/matchresult.html
@@ -73,8 +73,10 @@
 						</div>
 						<br/>
 						<div class="row">
-							<button type="submit" class="btn btn-primary" th:text="#{button.save}"></button>
-							<a href="#" th:href="@{${matchResultCommand.getBackUrl()}}" class="btn btn-default" role="button" th:text="#{button.cancel}"></a>
+							<div class="col-xs-12">
+								<button type="submit" class="btn btn-primary" th:text="#{button.save}"></button>
+								<a href="#" th:href="@{${matchResultCommand.getBackUrl()}}" class="btn btn-default" role="button" th:text="#{button.cancel}"></a>
+							</div>
 						</div>
 					</div>
 				</div>
