--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -35,7 +35,7 @@
 
                         <div class="form-group">
                             <button type="submit" class="btn btn-block btn-lg btn-primary" th:value="#{login.button.login}">
-                                <span th:text="#{login.button.login}"></span>&nbsp;<i class="fas fa-sign-in-alt"></i>
+                                <i class="fas fa-sign-in-alt"></i>&nbsp;<span th:text="#{login.button.login}"></span>
                             </button>
                         </div>
                         <div class="form-group">
