--- a/src/main/resources/templates/ranking/list.html
+++ b/src/main/resources/templates/ranking/list.html
@@ -3,6 +3,7 @@
 	xmlns:sec="http://www.thymeleaf.org/extras/spring-security" layout:decorate="~{_layout}">
 	<head>
 		<title th:text="#{ranking.list.title}"></title>
+		<link rel="stylesheet" th:href="@{/css/pages/ranking.css}" />
 	</head>
 	<body>
 		<div layout:fragment="content">
@@ -12,7 +13,7 @@
 					<h1 th:text="#{ranking.list.title}"></h1>
 				</div> 
 				<div th:if="${@runtimeSettingsUtil.getSettings().isEnabledParentChildRanking()}" class="col-xs-6">
-					<div class="row pull-right btn-group" role="group">
+					<div class="row pull-right btn-group filter-button-group" role="group">
 						<a href="#" th:href="@{/ranking/mixed}" class="btn btn-default"><i class="fas fa-user" aria-hidden="true"></i> <i class="fas fa-child" aria-hidden="true"></i></a>
 						<a href="#" th:href="@{/ranking/adult}" class="btn btn-default"><i class="fas fa-user" aria-hidden="true"></i></a>
 						<a href="#" th:href="@{/ranking/child}" class="btn btn-default"><i class="fas fa-child" aria-hidden="true"></i></a>
