--- a/src/main/resources/templates/registration/registration.html
+++ b/src/main/resources/templates/registration/registration.html
@@ -33,6 +33,11 @@
 					<input id="passwordRepeat" type="password" th:field="*{passwordRepeat}" class="form-control" />
 					<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('passwordRepeat')}" th:errors="*{passwordRepeat}">passwordRepeat error</p>
 				</div>
+				<div th:if="${@runtimeSettingsUtil.getSettings().isEnabledParentChildRanking()}" class="form-group">
+					<input id="child" type="checkbox" th:field="*{child}" th:value="${child}"/>
+					<label for="child" th:text="#{user.create.child}"></label>
+					<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('child')}" th:errors="*{child}">child error</p>
+				</div>
 				<div class="form-group">
 					<button type="submit" class="btn btn-primary" th:text="#{button.save}"></button>
 					<a href="#" th:href="@{/}" class="btn btn-default" role="button" th:text="#{back.to.login}"></a>
