--- a/src/main/resources/templates/registration/registration.html
+++ b/src/main/resources/templates/registration/registration.html
@@ -35,7 +35,7 @@
 				</div>
 				<div th:if="${@runtimeSettingsUtil.getSettings().isEnabledParentChildRanking()}" class="form-group">
 					<input id="child" type="checkbox" th:field="*{child}" th:value="${child}"/>
-					<label for="child" th:text="#{user.create.child}"></label>
+					<label for="child" th:text="#{registration.child}"></label>
 					<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('child')}" th:errors="*{child}">child error</p>
 				</div>
 				<div class="form-group">
