--- a/src/main/resources/templates/ranking/list.html
+++ b/src/main/resources/templates/ranking/list.html
@@ -13,12 +13,19 @@
 				</div> 
 				<div th:if="${@runtimeSettingsUtil.getSettings().isEnabledParentChildRanking()}" class="col-xs-6">
 					<div class="row pull-right btn-group no-left-right-margin" role="group">
-						<a href="#" th:href="@{/ranking/mixed}" class="btn btn-default">
+						<a href="#" th:href="@{/ranking/mixed}" class="btn"
+						   th:classappend="${rankingSelection == T(de.fred4jupiter.fredbet.domain.RankingSelection).MIXED ? 'btn-info' : 'btn-default'}">
 							<i class="fas fa-user" aria-hidden="true"></i>
 							<i class="fas fa-child" aria-hidden="true"></i>
 						</a>
-						<a href="#" th:href="@{/ranking/adult}" class="btn btn-default"><i class="fas fa-user" aria-hidden="true"></i></a>
-						<a href="#" th:href="@{/ranking/child}" class="btn btn-default"><i class="fas fa-child" aria-hidden="true"></i></a>
+						<a href="#" th:href="@{/ranking/adult}" class="btn"
+						   th:classappend="${rankingSelection == T(de.fred4jupiter.fredbet.domain.RankingSelection).ONLY_ADULTS ? 'btn-info' : 'btn-default'}">
+							<i class="fas fa-user" aria-hidden="true"></i>
+						</a>
+						<a href="#" th:href="@{/ranking/child}" class="btn"
+						   th:classappend="${rankingSelection == T(de.fred4jupiter.fredbet.domain.RankingSelection).ONLY_CHILDREN? 'btn-info' : 'btn-default'}">
+							<i class="fas fa-child" aria-hidden="true"></i>
+						</a>
 					</div>
 				</div>
 			</div>
