--- a/src/main/resources/templates/_navigation.html
+++ b/src/main/resources/templates/_navigation.html
@@ -130,6 +130,9 @@
 								<li th:class="${pageState_user_importexport}" sec:authorize="hasAuthority('PERM_ADMINISTRATION')">
 									<a th:href="@{/user/importexport}" th:text="#{user.importexport.title}"></a>
 								</li>
+								<li th:class="${pageState_importexport}" sec:authorize="hasAuthority('PERM_ADMINISTRATION')">
+									<a th:href="@{/importexport}" th:text="#{importexport.title}"></a>
+								</li>
 						  		<li th:class="${pageState_systeminfo}" sec:authorize="hasAuthority('PERM_SYSTEM_INFO')">
 						  			<a href="#systeminfo" th:href="@{/systeminfo}" th:text="#{navigation.systemInfo}"></a>
 					  			</li>
