--- a/src/main/resources/templates/_layout.html
+++ b/src/main/resources/templates/_layout.html
@@ -8,11 +8,11 @@
 		
 		<link rel="shortcut icon" th:href="@{/favicon.ico}" />
 
-		<link rel="stylesheet" th:href="@{/webjars/font-awesome/5.12.0/css/fontawesome.min.css}" />
-		<link rel="stylesheet" th:href="@{/webjars/font-awesome/5.12.0/css/brands.min.css}" />
-		<link rel="stylesheet" th:href="@{/webjars/font-awesome/5.12.0/css/solid.min.css}" />
-		<link rel="stylesheet" th:href="@{/webjars/bootstrap/3.4.1/css/bootstrap.min.css}" />
-		<link rel="stylesheet" th:href="@{/webjars/bootstrap/3.4.1/css/bootstrap-theme.min.css}" />
+		<link rel="stylesheet" th:href="@{/webjars/font-awesome/css/fontawesome.min.css}" />
+		<link rel="stylesheet" th:href="@{/webjars/font-awesome/css/brands.min.css}" />
+		<link rel="stylesheet" th:href="@{/webjars/font-awesome/css/solid.min.css}" />
+		<link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" />
+		<link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap-theme.min.css}" />
 		<link rel="stylesheet" th:href="@{/lightbox/css/lightbox.min.css}" />
 		<link rel="stylesheet" th:href="@{/css/custom.css}" />
 		<link rel="stylesheet" th:href="@{/css/print.css}" media="print"/>
@@ -22,9 +22,10 @@
 		<div class="container" role="main">
 			<div layout:fragment="content" th:remove="tag">Content Placeholder</div>
 		</div>
-		<script type="text/javascript" th:src="@{/webjars/jquery/2.1.4/jquery.min.js}"></script>
+		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+		<script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
 		<script type="text/javascript" th:src="@{/js/popper-1.11.0.min.js}"></script>
-		<script type="text/javascript" th:src="@{/webjars/bootstrap/3.4.1/js/bootstrap.min.js}"></script>
+		<script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
 		<script type="text/javascript" th:src="@{/js/bootstrap-confirmation.min.js}"></script>
 		<script type="text/javascript" th:src="@{/lightbox/js/lightbox.min.js}"></script>
 
