--- a/src/main/resources/templates/_layout.html
+++ b/src/main/resources/templates/_layout.html
@@ -24,7 +24,7 @@
 		</div>
 		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
 		<script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
-		<script type="text/javascript" th:src="@{/js/popper-1.11.0.min.js}"></script>
+		<script type="text/javascript" th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
 		<script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
 		<script type="text/javascript" th:src="@{/js/bootstrap-confirmation.min.js}"></script>
 		<script type="text/javascript" th:src="@{/lightbox/js/lightbox.min.js}"></script>
