--- a/src/main/resources/templates/imexport/import_export.html
+++ b/src/main/resources/templates/imexport/import_export.html
@@ -9,6 +9,11 @@
 			<h2 th:text="#{importexport.title}"></h2>
 			<div class="col-xs-12 col-sm-6 col-md-4">
 				<div class="row">
+					<div class="form-group">
+						<h3 class="label label-info" th:text="#{importexport.subtitle}"></h3>
+					</div>
+				</div>
+				<div class="row">
 					<div class="panel panel-default">
 						<div class="user panel-heading">
 							  <span th:text="#{importexport.export.name}"></span>
