--- a/src/main/resources/templates/image/image_upload.html
+++ b/src/main/resources/templates/image/image_upload.html
@@ -8,47 +8,68 @@
 	</head>
 	<body>
 		<div layout:fragment="content" class="container">
-			<div class="row">
-				<div class="col-12 col-sm-6 col-md-4">
-					<form th:action="@{/image/upload}" th:object="${imageUploadCommand}" method="post" enctype="multipart/form-data" role="form">
-						<div class="mb-3">
-							<label class="form-label" th:text="#{image.upload.groupName}"></label><br/>
-							<select th:field="*{galleryGroup}" class="form-control">
-							    <option th:each="imageGroupName : ${availableImageGroups}" th:value="${imageGroupName}" th:text="${imageGroupName}"></option>
-							</select>
-						</div>
-						<div class="mb-3" sec:authorize="hasAuthority('PERM_EDIT_IMAGE_GROUP')">
-							<label class="form-label" th:text="#{image.upload.editGroup}"></label><br/>
-							<a href="#" th:href="@{/imagegroup/show}" class="btn btn-info" role="button" th:text="#{image.upload.msg.editGroup}"></a>
-						</div>
-						<div class="">
-							<label class="form-label"th:text="#{image.upload.file}"></label><br/>
-					    	<input class="form-control" id="upload" type="file" accept="image/jpeg"/>
-						</div>
-						<div class="">
-							<input id="myFileBase64" type="hidden" name="myFileBase64" value="" />
-							<img id="preview" class="img-thumbnail"/>
-						</div>
-						<div class="mb-3">
-							<label class="form-label" th:text="#{image.upload.rotate}"></label><br/>
-							<button type="button" class="btn btn-dark" data-deg="-90">
-								<i class="fas fa-undo" aria-hidden="true"></i>
-							</button>
-							<button type="button" class="btn btn-dark" data-deg="90">
-								<i class="fas fa-redo" aria-hidden="true"></i>
-							</button>
-						</div>
-						<div class="mb-3">
-							<label class="form-label" th:text="#{image.upload.description}"></label><br/>
-							<input type="text" th:field="*{description}" class="form-control" />
-						</div>
-						<div class="mb-3">
-							<input type="submit" class="btn btn-primary" th:value="#{image.upload.button}" />
-							<a href="#" th:href="@{/gallery/show}" class="btn btn-default" th:text="#{image.upload.toImageGallery}"></a>
-						</div>
-				    </form>
-			    </div>
-			</div>
+            <form th:action="@{/image/upload}" th:object="${imageUploadCommand}" method="post" enctype="multipart/form-data" role="form">
+                <div class="row">
+                    <div class="col-12 col-sm-3 col-md-2">
+                        <div class="mb-3">
+                            <label for="groupName" class="form-label" th:text="#{image.upload.groupName}"></label><br/>
+                            <select id="groupName" th:field="*{galleryGroup}" class="form-select">
+                                <option th:each="imageGroupName : ${availableImageGroups}" th:value="${imageGroupName}" th:text="${imageGroupName}"></option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-3 col-md-2">
+                        <div class="mb-3" sec:authorize="hasAuthority('PERM_EDIT_IMAGE_GROUP')">
+                            <label class="form-label" th:text="#{image.upload.editGroup}"></label><br/>
+                            <a href="#" th:href="@{/imagegroup/show}" class="btn btn-info" role="button" th:text="#{image.upload.msg.editGroup}"></a>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-4">
+                        <div class="mb-3">
+                            <label class="form-label" th:text="#{image.upload.file}"></label><br/>
+                            <input class="form-control" id="upload" type="file" accept="image/jpeg"/>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-12 col-sm-6 col-md-4">
+                        <div class="mb-3">
+                            <input id="myFileBase64" type="hidden" name="myFileBase64" value="" />
+                            <img id="preview" class="img-thumbnail"/>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-12 col-sm-2">
+                        <div class="mb-3">
+                            <label class="form-label" th:text="#{image.upload.rotate}"></label><br/>
+                            <button type="button" class="btn btn-dark" data-deg="-90">
+                                <i class="fas fa-undo" aria-hidden="true"></i>
+                            </button>
+                            <button type="button" class="btn btn-dark" data-deg="90">
+                                <i class="fas fa-redo" aria-hidden="true"></i>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-4">
+                        <div class="mb-3">
+                            <label for="description" class="form-label" th:text="#{image.upload.description}"></label><br/>
+                            <input id="description" type="text" th:field="*{description}" class="form-control" />
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row mt-3">
+                    <div class="col-12">
+                        <div class="mb-3">
+                            <input type="submit" class="btn btn-primary" th:value="#{image.upload.button}" />
+                            <a href="#" th:href="@{/gallery/show}" class="btn btn-default" th:text="#{image.upload.toImageGallery}"></a>
+                        </div>
+                    </div>
+                </div>
+            </form>
 
 			<div class="row mt-3">
 				<div class="col-12">
