--- a/src/main/resources/templates/bet/list_open.html
+++ b/src/main/resources/templates/bet/list_open.html
@@ -8,8 +8,8 @@
 	<div layout:fragment="content">
 		<h1 th:text="#{bet.listOpen.title} + ' (' + ${#lists.size(matchesToBet)} + ')'"></h1>
 		<div th:if="${not #lists.isEmpty(matchesToBet)}" class="row">
-			<div class="col-12 col-sm-6 col-md-4">
-				<div class="form-group">
+			<div class="col-12">
+				<div class="mb-3">
 					<a href="#" th:href="@{'/bet/dice'}" class="btn btn-info" role="button">
 						<span class="fas fa-dice"></span> <span th:text="#{bet.listOpen.dice.all}"></span>
 					</a>
@@ -39,7 +39,7 @@
 								<span th:text="${matchCommand.stadium}"></span>
 							</div>
 							<div class="col-3">
-								<a href="#" th:href="@{'/bet/createOrUpdate/' + ${matchCommand.matchId}} + '?redirectViewName=OPEN_BETS'" th:classappend="${matchCommand.hasMatchStarted()}? 'disabled'"
+								<a href="#" th:href="@{'/bet/createOrUpdate/' + ${matchCommand.matchId} + '?redirectViewName=OPEN_BETS'}" th:classappend="${matchCommand.hasMatchStarted()}? 'disabled'"
 									class="btn btn-success" role="button">
 									<span class="fas fa-thumbs-up fa-lg"></span>
 								</a>
