--- a/src/main/resources/templates/bet/list_open.html
+++ b/src/main/resources/templates/bet/list_open.html
@@ -18,14 +18,14 @@
 		</div>
 		<div class="row">
 			<div class="col-12 col-sm-6 col-md-4" th:each="matchCommand : ${matchesToBet}">
-				<div class="card">
+				<div class="card mb-3">
 					<div class="card-body">
 						<div class="row">
 							<div class="col-12">
-								<img class="flag" th:if="${matchCommand.getIconPathTeamOne() != null}" th:src="@{${matchCommand.getIconPathTeamOne()}}"/>
+								<img class="flag" th:if="${matchCommand.getIconPathTeamOne() != null}" th:src="@{${matchCommand.getIconPathTeamOne()}}" alt="teamOne"/>
 								<span class="bold" th:text="${matchCommand.teamNameOne}"></span>
 								<span> - </span>
-								<img class="flag" th:if="${matchCommand.getIconPathTeamTwo() != null}" th:src="@{${matchCommand.getIconPathTeamTwo()}}"/>
+								<img class="flag" th:if="${matchCommand.getIconPathTeamTwo() != null}" th:src="@{${matchCommand.getIconPathTeamTwo()}}" alt="teamTwo"/>
 								<span class="bold" th:text="${matchCommand.teamNameTwo}"></span>
 								<br/>
 							</div>
